# terminusdb-tutorials

./: .gitignore  README.md  START.ipynb  Untitled.ipynb  micro-format-checker.py  tutorials.js
.binder/: environment.yml  postBuild  terminusdb-tutorials.jupyterlab-workspace
bands/: bands.py
bank-tutorial/: taking_terminus_to_the_bank.ipynb  taking_terminus_to_the_bank.py  taking_terminus_to_the_bank2.py
binder/: apt.txt  environment.yml  postBuild
brewery/: Brewery Tutorial.ipynb  brewery_tutorial.py
cms-blogging-platform/: Makefile  README.md  create_from_files.py  schema.json
covid_data/: README.md  catalog.json  config.json  eu_2020-04-07.csv  schema.py  tap_config.json
dbpedia-tutorial/: dbpedia.md  dbpedia.py  setup.py
diff_patch/: README.md  diff_demo.py  diff_patch.js  mongo_demo.py
document_graph/: README.md  document_graph.py  index.html  node_link.py
documentation/: createdb.js
episode-2/: episode2.ipynb  episode2.py
examples/: dbpedia_path_query.py
flight-tutorial/: README.md  flight_schema.py  kgc-tutorial.py  load_data.py
game-of-thrones/: README.md  create_schema.py  game_of_thrones.py  load_data.py  view.js
geojson/: geojson.json
getting_started/: README.md  add_contractors.py  insert_data.py  lesson_1.md  lesson_2.md  lesson_3.md  lesson_4.md  lesson_5.md  query_data.py  schema.py  update_data.py
github_data/: README.md  config.json  properties.json  schema.py  tap-config.json
netflix/: Netflix Tutorial.ipynb  config.json  netflix.py  netflix_inputdata.py  netflix_recommendation.py  pyproject.toml  schema.py
(+286 files in other folders)
