[tool.poetry]
name = "netflix"
version = "0.1.0"
description = ""
authors = ["Cheukting <cheukting.ho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
terminusdb-client = "^10.0.29"
black = "^22.3.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
